--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,16 +32,19 @@
 
 
     </FrameLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:text="Click on queue to get a token"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
         android:id="@+id/queue_list_view"></android.support.v7.widget.RecyclerView>
-<Button
-    android:layout_width="match_parent"
-    android:text="get token"
-    android:id="@+id/getToken"
-    android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
